--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <link href="./css/style.scss" rel="stylesheet" />
+    <link
+      rel="shortcut icon"
+      href="https://images.ctfassets.net/iiozhi00a8lc/yR545coUyPk5goHek7778/1a77940e0fbc3aaee7d613d012575e29/t146_favicon.png"
+    />
     <title>Miami Marlins</title>
   </head>
   <body>
-    <h1>Miami Marlins</h1>
+    <div class="wrapper">
+      <h1>Miami Marlins</h1>
+    </div>
+
+    <script src="./index.js"></script>
   </body>
 </html>
