--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,39 @@
       </div>
     </section>
 
+    <footer class="section section--footer">
+      <div class="wrapper wrapper--fixed">
+        <div class="footer-content">
+          <div class="logo">
+            <img class="fluid-img js-team-logo" alt="Marlins logo" />
+          </div>
+          <div class="footer-links">
+            <a class="social-link js-facebook">
+              <img
+                class="fluid-img"
+                src="./img/facebook.svg"
+                alt="team facebook"
+              />
+            </a>
+            <a class="social-link js-twitter">
+              <img
+                class="fluid-img"
+                src="./img/twitter.svg"
+                alt="team twitter"
+              />
+            </a>
+            <a class="social-link js-instagram">
+              <img
+                class="fluid-img"
+                src="./img/instagram.svg"
+                alt="team instagram"
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script src="./index.js"></script>
   </body>
 </html>
